// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendTransactionForm should render editable 1`] = `
<div>
  <div
    class="pt-2"
  >
    <div
      class="sc-AxhUy nFONV"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  invisible w-2"
              >
                <div
                  class="mr-2"
                >
                  Avatar
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Address
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  float-right"
              >
                <div
                  class="mr-2"
                >
                  Amount
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  invisible"
              >
                <div
                  class="mr-2"
                >
                  Action
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="sc-AxiKw daEcTw"
              />
            </td>
            <td>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 1
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FJKDSA…SJKDFJ
                </span>
              </div>
            </td>
            <td
              class="font-bold text-right text-theme-neutral-800"
            >
              100
               
              ARK
            </td>
            <td
              class="w-16 text-right"
            >
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxhCb fxrKLH"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="sc-AxiKw daEcTw"
              />
            </td>
            <td>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 2
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AhFJKD…SJKDFJ
                </span>
              </div>
            </td>
            <td
              class="font-bold text-right text-theme-neutral-800"
            >
              100
               
              ARK
            </td>
            <td
              class="w-16 text-right"
            >
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxhCb fxrKLH"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="sc-AxiKw daEcTw"
              />
            </td>
            <td>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 3
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FAhFJK…SJKDFJ
                </span>
              </div>
            </td>
            <td
              class="font-bold text-right text-theme-neutral-800"
            >
              100
               
              ARK
            </td>
            <td
              class="w-16 text-right"
            >
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxhCb fxrKLH"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="sc-AxiKw daEcTw"
              />
            </td>
            <td>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 4
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FAhFJK…SJKDFJ
                </span>
              </div>
            </td>
            <td
              class="font-bold text-right text-theme-neutral-800"
            >
              100
               
              ARK
            </td>
            <td
              class="w-16 text-right"
            >
              <button
                class="sc-AxirZ fhzkRl"
                color="primary"
                data-testid="recipient-list__remove-recipient"
                type="button"
              >
                <div
                  class="py-1"
                >
                  <div
                    class="sc-AxhCb fxrKLH"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </div>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`SendTransactionForm should render non-editable 1`] = `
<div>
  <div
    class="pt-2"
  >
    <div
      class="sc-AxhUy nFONV"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  invisible w-2"
              >
                <div
                  class="mr-2"
                >
                  Avatar
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  undefined"
              >
                <div
                  class="mr-2"
                >
                  Address
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  float-right"
              >
                <div
                  class="mr-2"
                >
                  Amount
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="sc-AxiKw daEcTw"
              />
            </td>
            <td>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 1
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FJKDSA…SJKDFJ
                </span>
              </div>
            </td>
            <td
              class="font-bold text-right text-theme-neutral-800"
            >
              100
               
              ARK
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="sc-AxiKw daEcTw"
              />
            </td>
            <td>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 2
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AhFJKD…SJKDFJ
                </span>
              </div>
            </td>
            <td
              class="font-bold text-right text-theme-neutral-800"
            >
              100
               
              ARK
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="sc-AxiKw daEcTw"
              />
            </td>
            <td>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 3
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FAhFJK…SJKDFJ
                </span>
              </div>
            </td>
            <td
              class="font-bold text-right text-theme-neutral-800"
            >
              100
               
              ARK
            </td>
          </tr>
          <tr
            class="border-b border-theme-neutral-200"
            data-testid="recipient-list__recipient-list-item"
          >
            <td
              class="w-12 py-4"
            >
              <div
                class="sc-AxiKw daEcTw"
              />
            </td>
            <td>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  Recipient 4
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  FAhFJK…SJKDFJ
                </span>
              </div>
            </td>
            <td
              class="font-bold text-right text-theme-neutral-800"
            >
              100
               
              ARK
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
